--- a/index.html
+++ b/index.html
@@ -7,42 +7,42 @@
   </head>
   <body class="body">
       <div class="image-wrapper">
-        <img src="./eisenhower-matrix.jpg">
+        <img class="img" src="./eisenhower-matrix.jpg">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
       <div class="app-wrapper">
         <p id="add-section">
-          <label for="new-task">Add Item</label>
+          <label for="new-task" class="title add-item">Add Item</label>
           <div class="task-row-wrapper">
-            <input id="new-task"class="task" type="text">
-            <button>Add</button>
+            <input id="new-task"class="task new-task-input" type="text">
+            <button class="button">Add</button>
           </div>
         </p>
-        <h3>Todo</h3>
+        <h3 class="title">Todo</h3>
         <ul id="incomplete-tasks">
-          <li>
-            <input type="checkbox">
-            <label class="task">Pay Bills</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+          <li class="list-item">
+            <input class="checkbox" type="checkbox">
+            <label class="task label">Pay Bills</label>
+            <input type="text" class="task text-input">
+            <button class="button edit">Edit</button>
+            <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
           </li>
-          <li class="edit-mode">
-            <input type="checkbox">
-            <label class="task">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task">
-            <button class="edit">Save</button>
-            <button class="delete"><img src="./remove.svg"></button>
+          <li class="list-item edit-mode">
+            <input class="checkbox" type="checkbox">
+            <label class="task label">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="task text-input">
+            <button class="button edit">Save</button>
+            <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
           </li>
         </ul>
-        <h3>Completed</h3>
+        <h3 class="title">Completed</h3>
         <ul id="completed-tasks">
-          <li>
-            <input type="checkbox" checked>
-            <label class="task">See the Doctor</label>
-            <input type="text" class="task">
-            <button class="edit">Edit</button>
-            <button class="delete"><img src="./remove.svg"></button>
+          <li class="list-item">
+            <input class="checkbox" type="checkbox" checked>
+            <label class="task label">See the Doctor</label>
+            <input type="text" class="task text-input">
+            <button class="button edit">Edit</button>
+            <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
           </li>
         </ul>
       </div>
