--- a/index.html
+++ b/index.html
@@ -6,46 +6,52 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-      <div class="image-wrapper">
+      <header class="image-wrapper">
         <img class="img" src="./eisenhower-matrix.jpg">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-      </div>
-      <div class="app-wrapper">
-        <p id="add-section">
-          <label for="new-task" class="title add-item">Add Item</label>
-          <div class="task-row-wrapper">
-            <input id="new-task"class="task new-task-input" type="text">
-            <button class="button">Add</button>
-          </div>
-        </p>
-        <h3 class="title">Todo</h3>
-        <ul id="incomplete-tasks">
-          <li class="list-item">
-            <input class="checkbox" type="checkbox">
-            <label class="task label">Pay Bills</label>
-            <input type="text" class="task text-input">
-            <button class="button edit">Edit</button>
-            <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
-          </li>
-          <li class="list-item edit-mode">
-            <input class="checkbox" type="checkbox">
-            <label class="task label">Go Shopping</label>
-            <input type="text" value="Go Shopping" class="task text-input">
-            <button class="button edit">Save</button>
-            <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
-          </li>
-        </ul>
-        <h3 class="title">Completed</h3>
-        <ul id="completed-tasks">
-          <li class="list-item">
-            <input class="checkbox" type="checkbox" checked>
-            <label class="task label">See the Doctor</label>
-            <input type="text" class="task text-input">
-            <button class="button edit">Edit</button>
-            <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
-          </li>
-        </ul>
-      </div>
+      </header>
+      <main class="app-wrapper">
+        <section class="add-section">
+          <h3 class="title">Add Item</h3>
+            <label for="new-task" class="add-item"></label>
+            <div class="task-row-wrapper">
+              <input id="new-task"class="task new-task-input" type="text">
+              <button class="button">Add</button>
+            </div>
+
+        </section>
+        <section class="todo-section">
+          <h3 class="title">Todo</h3>
+          <ul id="incomplete-tasks">
+            <li class="list-item">
+              <input class="checkbox" type="checkbox">
+              <label class="task label">Pay Bills</label>
+              <input type="text" class="task text-input">
+              <button class="button edit">Edit</button>
+              <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
+            </li>
+            <li class="list-item edit-mode">
+              <input class="checkbox" type="checkbox">
+              <label class="task label">Go Shopping</label>
+              <input type="text" value="Go Shopping" class="task text-input">
+              <button class="button edit">Save</button>
+              <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
+            </li>
+          </ul>
+        </section> 
+        <setion class="completed-section">
+          <h3 class="title">Completed</h3>
+          <ul id="completed-tasks">
+            <li class="list-item">
+              <input class="checkbox" type="checkbox" checked>
+              <label class="task label">See the Doctor</label>
+              <input type="text" class="task text-input">
+              <button class="button edit">Edit</button>
+              <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
+            </li>
+          </ul>
+        </setion>
+      </main>
     <script src="app.js"></script>
   </body>
 </html>
