--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body class="body">
       <header class="image-wrapper">
-        <img class="img" src="./eisenhower-matrix.jpg">
+        <img class="img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
         <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </header>
       <main class="app-wrapper">
@@ -28,14 +28,14 @@
               <label class="task label">Pay Bills</label>
               <input type="text" class="task text-input">
               <button class="button edit">Edit</button>
-              <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
+              <button class="button delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
             </li>
             <li class="list-item edit-mode">
               <input class="checkbox" type="checkbox">
               <label class="task label">Go Shopping</label>
               <input type="text" value="Go Shopping" class="task text-input">
               <button class="button edit">Save</button>
-              <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
+              <button class="button delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
             </li>
           </ul>
         </section> 
@@ -47,7 +47,7 @@
               <label class="task label">See the Doctor</label>
               <input type="text" class="task text-input">
               <button class="button edit">Edit</button>
-              <button class="button delete"><img class="remove-img"src="./remove.svg"></button>
+              <button class="button delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
             </li>
           </ul>
         </setion>
