--- a/index.html
+++ b/index.html
@@ -6,48 +6,47 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="body">
-      <header class="image-wrapper">
-        <img class="img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
-        <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <header class="header">
+        <img class="header__img" src="./eisenhower-matrix.jpg" alt="eisenhower matrix">
+        <a class="link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </header>
-      <main class="app-wrapper">
+      <main class="app">
         <section class="add-section">
           <h3 class="title">Add Item</h3>
-            <label for="new-task" class="add-item"></label>
+            <label for="new-task" class="add-section__label"></label>
             <div class="task-row-wrapper">
-              <input id="new-task"class="task new-task-input" type="text">
-              <button class="button">Add</button>
+              <input id="new-task"class="add-section__text-input text-input" type="text">
+              <button class="button button_add">Add</button>
             </div>
-
         </section>
         <section class="todo-section">
           <h3 class="title">Todo</h3>
-          <ul id="incomplete-tasks">
-            <li class="list-item">
-              <input class="checkbox" type="checkbox">
-              <label class="task label">Pay Bills</label>
-              <input type="text" class="task text-input">
-              <button class="button edit">Edit</button>
-              <button class="button delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
+          <ul class="list" id="incomplete-tasks">
+            <li class="list__list-item list-item">
+              <input class="list-item__checkbox" type="checkbox">
+              <label class="list-item__label">Pay Bills</label>
+              <input type="text" class="list-item__text-input text-input">
+              <button class="button button_edit">Edit</button>
+              <button class="button button_delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
             </li>
-            <li class="list-item edit-mode">
-              <input class="checkbox" type="checkbox">
-              <label class="task label">Go Shopping</label>
-              <input type="text" value="Go Shopping" class="task text-input">
-              <button class="button edit">Save</button>
-              <button class="button delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
+            <li class="list__list-item list-item edit-mode">
+              <input class="list-item__checkbox" type="checkbox">
+              <label class="list-item__label">Go Shopping</label>
+              <input type="text" value="Go Shopping" class="list-item__text-input text-input">
+              <button class="button button_edit">Save</button>
+              <button class="button button_delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
             </li>
           </ul>
         </section> 
         <setion class="completed-section">
           <h3 class="title">Completed</h3>
-          <ul id="completed-tasks">
-            <li class="list-item">
-              <input class="checkbox" type="checkbox" checked>
-              <label class="task label">See the Doctor</label>
-              <input type="text" class="task text-input">
-              <button class="button edit">Edit</button>
-              <button class="button delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
+          <ul class="list" id="completed-tasks">
+            <li class="list__list-item list-item">
+              <input class="list-item__checkbox checkbox" type="checkbox" checked>
+              <label class="list-item__label">See the Doctor</label>
+              <input type="text" class="list-item__text-input text-input">
+              <button class="button button_edit">Edit</button>
+              <button class="button button_delete"><img class="remove-img"src="./remove.svg" alt="remove"></button>
             </li>
           </ul>
         </setion>
